--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "@tauri-apps/api": "^1.0.2",
+    "@videosdk.live/js-sdk": "^0.0.49",
     "@videosdk.live/rtc-js-prebuilt": "^0.3.10",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.5.0",
